--- a/cp2/Computing Project 2.ipynb
+++ b/cp2/Computing Project 2.ipynb
@@ -591,9 +591,11 @@
     "1.6) Turning on the time\n",
     "-------------------------\n",
     "\n",
-    "Next we need to add the time component as in Eq. 1. Add a set of nested loops, \n",
-    "similar to last week's loop that sets the orientation of each arrow in the list based on \n",
-    "the current time and the initial phase of the arrow at each position. Something like this:"
+    "Next we need to add the time component as in Eq. 1. Add a set of nested loops, similar to last week's loop that sets the orientation of each arrow in the list based on the current time and the initial phase of the arrow at each position. At a moment in time you should see somethig like this:\n",
+    "\n",
+    "![Travelling Wave](https://lh5.googleusercontent.com/TgcGqinFTVrI6jLcVeTfaarDjKvbEHrTEUt9jz01eplmGIlaG_fsz6MFDdDsw9u_A2qsKkrP=w1506-h826)\n",
+    "\n",
+    "Here's a start that you can use to finish this project:"
    ]
   },
   {
@@ -604,6 +606,8 @@
    },
    "outputs": [],
    "source": [
+    "canvas()  # open a new vpython window\n",
+    "\n",
     "omega = 2*pi                   # 1 rev/sec\n",
     "t=0.0                          # start t at zero\n",
     "dt=0.01                        # 1/100 of a second per step\n",
@@ -630,15 +634,6 @@
     "\n",
     "3) What could you change about the {\\it spatial} behavior of the wavefunction to make the waves appear to move in the opposite direction? No fair modifying the time part! Use your program to verify your answer. How does changing the spatial behavior of the wavefunction affect the expectation value of the momentum operator?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
