--- a/cp2/Computing Project 2.ipynb
+++ b/cp2/Computing Project 2.ipynb
@@ -593,18 +593,27 @@
     "\n",
     "Next we need to add the time component as in Eq. 1. Add a set of nested loops, similar to last week's loop that sets the orientation of each arrow in the list based on the current time and the initial phase of the arrow at each position. At a moment in time you should see somethig like this:\n",
     "\n",
-    "![Travelling Wave](https://lh5.googleusercontent.com/TgcGqinFTVrI6jLcVeTfaarDjKvbEHrTEUt9jz01eplmGIlaG_fsz6MFDdDsw9u_A2qsKkrP=w1506-h826)\n",
+    "<img src=\"https://lh5.googleusercontent.com/TgcGqinFTVrI6jLcVeTfaarDjKvbEHrTEUt9jz01eplmGIlaG_fsz6MFDdDsw9u_A2qsKkrP=w1506-h826\" alt=\"Travelling Wave\" style=\"width: 400px;\"/>\n",
     "\n",
     "Here's a start that you can use to finish this project:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-1-be46a87fc88e>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-be46a87fc88e>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    #\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "canvas()  # open a new vpython window\n",
     "\n",
