pull image from github

--- a/cp2/Computing Project 2.ipynb
+++ b/cp2/Computing Project 2.ipynb
@@ -593,7 +593,8 @@
     "\n",
     "Next we need to add the time component as in Eq. 1. Add a set of nested loops, similar to last week's loop that sets the orientation of each arrow in the list based on the current time and the initial phase of the arrow at each position. At a moment in time you should see somethig like this:\n",
     "\n",
-    "<img src=\"https://lh5.googleusercontent.com/TgcGqinFTVrI6jLcVeTfaarDjKvbEHrTEUt9jz01eplmGIlaG_fsz6MFDdDsw9u_A2qsKkrP=w1506-h826\" alt=\"Travelling Wave\" style=\"width: 400px;\"/>\n",
+    "<img src=\"https://github.com/sspickle/qm-computing-projects/blob/master/cp2/3d-twave.png?raw=true\"\n",
+    "alt=\"Travelling Wave\" style=\"width: 400px;\"/>\n",
     "\n",
     "Here's a start that you can use to finish this project:"
    ]
