--- a/cp7/CP7 Starter.ipynb
+++ b/cp7/CP7 Starter.ipynb
@@ -159,9 +159,9 @@
     }
    ],
    "source": [
-    "canvas()\n",
-    "\n",
-    "scene.background=color.white\n",
+    "canvas(width=600, height=300)\n",
+    "gd = graph(title=\"P(left) and P(right) vs. t\", xtitle=\"t\", ytitle=\"Probability\",\n",
+    "          width=600, height=200)\n",
     "\n",
     "def SetArrowFromCN( cn, a):\n",
     "    \"\"\"\n",
@@ -175,8 +175,6 @@
     "    a.axis.z = cn.imag\n",
     "    a.axis.x = 0.0\n",
     "    \n",
-    "\n",
-    "gd = graph(title=\"P(left) and P(right) vs. t\", xtitle=\"t\", ytitle=\"Probability\")\n",
     "\n",
     "gL = gcurve(color=color.blue)\n",
     "gR = gcurve(color=color.green)\n",
