--- a/cp3/Computing Project 3.ipynb
+++ b/cp3/Computing Project 3.ipynb
@@ -132,130 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"glowscript\" class=\"glowscript\"></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"glowscript\" class=\"glowscript\"></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from vpython import *\n",
     "canvas()\n",
@@ -292,19 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "[ 1  4  9 16]\n",
-      "30\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from vpython import *    #get \n",
     "from numpy import *\n",
@@ -325,19 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "[1 4]\n",
-      "5\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "x = array([1,2,3,4])\n",
     "print(x[:2].sum())      # prints out the value \"3\"\n",
@@ -356,25 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "phase: [ 0.   0.5  1.   1.5  2.   2.5  3.   3.5  4.   4.5  5.   5.5  6. ]\n",
-      "real part: [ 1.          0.87758256  0.54030231  0.0707372  -0.41614684 -0.80114362\n",
-      " -0.9899925  -0.93645669 -0.65364362 -0.2107958   0.28366219  0.70866977\n",
-      "  0.96017029]\n",
-      "imag part: [ 0.          0.47942554  0.84147098  0.99749499  0.90929743  0.59847214\n",
-      "  0.14112001 -0.35078323 -0.7568025  -0.97753012 -0.95892427 -0.70554033\n",
-      " -0.2794155 ]\n",
-      "13.0\n",
-      "5.0\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "x = linspace(0, 6.0, 13)\n",
     "print(\"phase:\",x)\n",
@@ -404,43 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"glowscript\" class=\"glowscript\"></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 571\n",
-      "At t=3*pi\n",
-      "At t=4*pi\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#\n",
     "# \"Starter Code\" for Project 3. Most things are set up except for the time dependence of the WF\n",
@@ -510,49 +329,21 @@
     "print(\"Starting Condition\")\n",
     "sleep(sleeptime)\n",
     "\n",
-    "def doOneIteration():\n",
-    "    global t\n",
-    "    \n",
+    "def DisplayWF(t):\n",
+    "    \"\"\"\n",
+    "    Update the display at a single timestep at time t. \n",
+    "    \"\"\"\n",
     "    psi=zeros(len(x),complex)\n",
     "    \n",
     "    for m in n:\n",
-    "        psi += coefs[m-1]*sqrt(2.0/a)*sin(m*pi*x/a)  # you need to add the time dependence!\n",
+    "        psi += coefs[m-1]*sqrt(2.0/a)*sin(m*pi*x/a) # add time dependence here!\n",
     "    \n",
     "    for i in range(NA):\n",
     "        SetArrowFromCN(psi[i], alist[i])             # update the arrows\n",
     "    \n",
     "    #\n",
     "    # now compute probabilities, expectation values, etc. and graph in this space\n",
-    "    #\n",
-    "    \n",
-    "    t += dt\n",
-    "\n",
-    "while t<pi:\n",
-    "    rate(framerate)\n",
-    "    doOneIteration()\n",
-    "    \n",
-    "print(\"At t=pi\")\n",
-    "sleep(sleeptime)\n",
-    "\n",
-    "while t<2*pi:\n",
-    "    rate(framerate)\n",
-    "    doOneIteration()\n",
-    "    \n",
-    "print(\"At t=2*pi\")\n",
-    "sleep(sleeptime)\n",
-    "\n",
-    "while t<3*pi:\n",
-    "    rate(framerate)\n",
-    "    doOneIteration()\n",
-    "    \n",
-    "print(\"At t=3*pi\")\n",
-    "sleep(sleeptime)\n",
-    "\n",
-    "while t<4*pi:\n",
-    "    rate(framerate)\n",
-    "    doOneIteration()\n",
-    "\n",
-    "print(\"At t=4*pi\")"
+    "    #\n"
    ]
   },
   {
@@ -562,7 +353,29 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "t = 0.0\n",
+    "dt = 2*pi/1000.0\n",
+    "\n",
+    "sleep(sleeptime)\n",
+    "print(\"Starting Condition\")\n",
+    "\n",
+    "while t<pi:\n",
+    "    rate(framerate)\n",
+    "    DisplayWF(t)\n",
+    "    t+=dt\n",
+    "    \n",
+    "sleep(sleeptime)\n",
+    "print(\"At t=pi\")\n",
+    "\n",
+    "while t<2*pi:\n",
+    "    rate(framerate)\n",
+    "    DisplayWF(t)\n",
+    "    t+=dt\n",
+    "\n",
+    "print(\"At t=2*pi\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
