--- a/cp1/Computing Project 1.ipynb
+++ b/cp1/Computing Project 1.ipynb
@@ -498,7 +498,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from vpython import *\n",
