--- a/demos/Square Well Superposition Demo.ipynb
+++ b/demos/Square Well Superposition Demo.ipynb
@@ -1,11 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "liked-upset",
+   "metadata": {},
+   "source": [
+    "Square Well superposition demo\n",
+    "--------------------------------------\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collectible-sport",
+   "id": "distributed-start",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") { window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")};}else{ element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -107,7 +141,7 @@
     "import vpython as vp\n",
     "import numpy as np\n",
     "\n",
-    "from ThreeD_QM_Models import TwoStateModelDemo\n",
+    "from ThreeD_QM_Models import SqWellSupDemo\n",
     "\n",
     "vp.canvas()\n",
     "\n",
@@ -115,81 +149,82 @@
     "A 3D representation of a superposition of two 1D quantum states using the y and z directions\n",
     " to represent the phasor wave function.\n",
     "\"\"\"\n",
+    "\n",
     "omega = 1.0\n",
     "L = 1.0\n",
     "N = 100 # number of phasors to model line..\n",
     "xarray = np.linspace(0, L, N)\n",
     "t=0.0\n",
     "dt=0.01\n",
-    "\n",
-    "props = {'t':0, 'relPhase':0, 'gndPhase':0, 'updateScreen':True}\n",
+    "gndPhase = 0.0  # phase of gnd state, useful for \"rotating\" with the gnd state\n",
     "\n",
     "def state(n, x, t):\n",
     "    \"\"\"\n",
     "    return the value of the (not normalized) psi(x,t) for the nth quantum state\n",
     "    \"\"\"\n",
-    "        \n",
-    "    if props['relPhase']:\n",
-    "        return np.sin(n*np.pi*(x+L/2)/L)*np.exp(-1j*((n*n - 1)*omega*t + props['gndPhase']))\n",
-    "    else:\n",
-    "        return np.sin(n*np.pi*(x+L/2)/L)*np.exp(-1j*(n*n)*omega*t)\n",
+    "    return (1.0/(np.pi*n))*(1.0-np.cos(n*np.pi/2))*np.sin(n*np.pi*(x+L/2)/L)*np.exp(-1j*(n*n)*omega*t)\n",
+    "            \n",
+    "TSM = SqWellSupDemo(xarray, state, Nterms=7)\n",
+    "updateScreen = False\n",
+    "TSM.update(0.0)\n",
     "\n",
-    "TSM = TwoStateModelDemo(xarray, state)\n",
+    "props = {'t':0, 'relPhase':0, 'gndPhase':0, 'updateScreen':True}\n",
     "\n",
-    "def One(b):\n",
-    "    TSM.toggleVisible(1)\n",
+    "def Num(b):\n",
+    "    TSM.toggleVisible(int(b.text))\n",
     "\n",
-    "vp.button( bind=One, text='1' )\n",
+    "vp.button( bind=Num, text='1' )\n",
+    "vp.button( bind=Num, text='2' )\n",
+    "vp.button( bind=Num, text='3' )\n",
+    "vp.button( bind=Num, text='4' )\n",
+    "vp.button( bind=Num, text='5' )\n",
+    "vp.button( bind=Num, text='6' )\n",
+    "vp.button( bind=Num, text='7' )\n",
     "\n",
-    "def Two(b):\n",
-    "    TSM.toggleVisible(2)\n",
+    "def Sup(b):\n",
+    "    TSM.toggleVisible(8)\n",
     "\n",
-    "vp.button( bind=Two, text='2' )\n",
-    "\n",
-    "def Sum(b):\n",
-    "    TSM.toggleVisible(3)\n",
-    "    \n",
-    "vp.button( bind=Sum, text='Sum' )\n",
+    "vp.button( bind=Sup, text='Sup.' )\n",
     "\n",
     "def Prob(b):\n",
-    "    TSM.toggleVisible(4)\n",
+    "    TSM.toggleVisible(9)\n",
     "    \n",
-    "vp.button( bind=Prob, text='Prob' )\n",
-    "\n",
-    "def Phase(b):\n",
-    "    props['relPhase'] ^= 1\n",
-    "    if props['relPhase']:\n",
-    "        props['gndPhase'] = omega*props['t']\n",
-    "    else:\n",
-    "        props['t']=props['gndPhase']/omega\n",
+    "vp.button( bind=Prob, text='Prob.' )\n",
     "    \n",
-    "vp.button( bind=Phase, text='Phase' )\n",
-    "\n",
     "def Pause(b):\n",
     "    props['updateScreen'] ^= 1\n",
     "    \n",
     "vp.button( bind=Pause, text='Pause' )\n",
     "\n",
+    "def StepPlus(b):\n",
+    "    props['t'] += dt\n",
+    "    TSM.update(props['t'])\n",
+    "    props['updateScreen'] = 0\n",
+    "    \n",
+    "def StepMinus(b):\n",
+    "    props['t'] -= dt\n",
+    "    TSM.update(props['t'])\n",
+    "    props['updateScreen'] = 0\n",
+    "    \n",
+    "vp.button( bind=Prob, text='Prob.' )\n",
+    "\n",
+    "vp.button( bind=StepPlus, text='+' )\n",
+    "\n",
+    "vp.button( bind=StepMinus, text='-' )\n",
     "\n",
     "while True:\n",
     "    vp.rate(100)\n",
     "    if props['updateScreen']:\n",
     "        TSM.update(props['t'])\n",
-    "        props['t'] += dt\n"
+    "        props['t'] += dt\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inner-tiffany",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "touched-balance",
+   "id": "stuffed-sharp",
    "metadata": {},
    "outputs": [],
    "source": []
